--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
@@ -45,7 +45,7 @@
         <div class="div_body_nav_title" id="div_body_nav_title_2">2.我在哪里提交资料进行认证？</div>
         <div class="div_body_nav_text">
             1、首先您需要在信息小镇注册一个账户。<a class="cursor">立即注册</a> <br />
-            2、登陆后进入个人中心--我的账户的“认证管理”即可进行资料认证。<a class="cursor">进入认证中心</a> <br />
+            2、登陆后进入个人中心--我的账户的“认证管理”即可进行资料认证。<a class="cursor">进入认证管理</a> <br />
         </div>
         <div class="div_body_nav_text"><span class="span_body_nav_img"></span></div>
         <div class="div_body_nav_text">
@@ -62,17 +62,17 @@
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何取消认证？</div>
         <div class="div_body_nav_text">
-            1、邮箱、手机认证通过后不可以取消，但可以更改。 登陆后进入个人中心---账户管理的“认证中心 ”即可进行邮箱、手机认证修改。进入认证中心<br />
+            1、邮箱、手机认证通过后不可以取消，但可以更改。 登陆后进入个人中心--我的账户的“认证管理”即可进行邮箱、手机认证修改。<a class="cursor">进入认证管理</a><br />
             2、实名（身份证）、执照认证后不可以取消。<br />
             3、个人身份认证后不可以取消。 <br />
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_5">5.为什么我提交验证申请的时候，系统提示我已被xx账户验证过了？</div>
         <div class="div_body_nav_text">
-            遇到这个提示说明您提供的资料已经在xx账户里验证了。您可以登录信息小镇帐号：xx查看，同时建议您能使用之前的账户进行登录，如果忘记密码请点击这里取回。 
+            遇到这个提示说明您提供的资料已经在xx账户里验证了。您可以登录信息小镇帐号：xx查看，同时建议您能使用之前的账户进行登录，如果忘记密码请点击这里取回。
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_6">6.收不到认证邮件？</div>
         <div class="div_body_nav_text">
-            建议您在垃圾邮件中查找一下，如果还是查询不到邮箱确认邮件，请提供您账号的相关信息与信息小镇客服联系，以便我们帮您查询并测试验证。 
+            建议您在垃圾邮件中查找一下，如果还是查询不到邮箱确认邮件，请提供您账号的相关信息与信息小镇客服联系，以便我们帮您查询并测试验证。
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_7">7.如何更换邮箱、手机的认证？</div>
         <div class="div_body_nav_text">
