--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -42,7 +42,7 @@
                 <span class="span_left_box_info_text">认证说明</span>
                 <span class="span_left_box_info_remark">介绍认证及认证中的问题</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_xxwffb">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_xxwffb.png")" />
                 <span class="span_left_box_info_text">信息无法发布</span>
                 <span class="span_left_box_info_remark">点击查看发帖失败原因</span>
