--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXWFFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXWFFB.css
@@ -209,3 +209,17 @@
     margin: 2px 5px 0px 5px;
     display: inline-block;
 }
+
+.span_body_nav_img_jp {
+    display: block;
+    width: 926px;
+    height: 300px;
+    background-image: url(../images/BZZX/bzzx_sy_xxwffb_jp.png);
+}
+
+.span_body_nav_img_tck {
+    display: block;
+    width: 939px;
+    height: 551px;
+    background-image: url(../images/BZZX/bzzx_sy_xxwffb_tck.png);
+}
