--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
@@ -38,7 +38,7 @@
 }
 
 .span_left_box_info_text {
-    color: #31b0d5;
+    color: #1790b4;
     height: 20px;
     width: 120px;
     display: block;
