--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -47,7 +47,7 @@
                 <span class="span_left_box_info_text">信息无法发布</span>
                 <span class="span_left_box_info_remark">点击查看发帖失败原因</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_xxbsc">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_xxbsc.png")" />
                 <span class="span_left_box_info_text">信息被删除</span>
                 <span class="span_left_box_info_remark">查看被删除原因</span>
