--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -24,11 +24,11 @@
         <div class="div_body_nav">
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="1">1、<span class="span_body_nav_inner">房产行业审核信息的原因判定</span></span>
-                <span class="span_body_nav" id="1_1"><span class="span_body_nav_inner childnode">标题内容违规说明</span></span>
-                <span class="span_body_nav" id="1_2"><span class="span_body_nav_inner childnode">无意义内容违规说明</span></span>
-                <span class="span_body_nav" id="1_3"><span class="span_body_nav_inner childnode">分类不当违规说明</span></span>
-                <span class="span_body_nav" id="1_4"><span class="span_body_nav_inner childnode">图片违规原因说明</span></span>
-                <span class="span_body_nav" id="1_5"><span class="span_body_nav_inner childnode">信息虚假非法原因</span></span>
+                <span class="span_body_nav" id="1_1"><span class="span_body_nav_inner childnode">1_1.标题内容违规说明</span></span>
+                <span class="span_body_nav" id="1_2"><span class="span_body_nav_inner childnode">1_2.无意义内容违规说明</span></span>
+                <span class="span_body_nav" id="1_3"><span class="span_body_nav_inner childnode">1_3.分类不当违规说明</span></span>
+                <span class="span_body_nav" id="1_4"><span class="span_body_nav_inner childnode">1_4.图片违规原因说明</span></span>
+                <span class="span_body_nav" id="1_5"><span class="span_body_nav_inner childnode">1_5.信息虚假非法原因</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="2">2、<span class="span_body_nav_inner">本地服务行业审核信息的原因判定</span></span>
@@ -366,7 +366,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="78" style="width:100px">业务类</td>
+                        <td rowspan="63" style="width:100px">业务类</td>
                         <td rowspan="8" style="width:100px">投资担保</td>
                         <td class="td_content">1.出现“仅凭、只需要身份证（或者“身份证、银行卡、学生证、住址、公积金密码”中任意组合）可贷款”或相同意思；个人信用贷款，如果内容中出现“不看征信不看流水”、“可办黑户”、“信用不良”、“取消黑名单”以及表达相近意思的；</td>
                         <td rowspan="8" style="width:100px">信息单条删除</td>
@@ -565,6 +565,130 @@
                     </tr>
                     <tr>
                         <td class="td_content">5.禁止出现双认证信息</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="7" style="width:100px">同城交友</td>
+                        <td class="td_content">1.同城交友中内容不得涉及金钱、禁止发布淫秽敏感和诋毁他人的负面言语</td>
+                        <td rowspan="7" style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.技能交换中交换淘宝开店技能属于无效信息</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">3.禁止商家发布的交易或宣传类信息属于无效信息或类别误置到相应二手类别</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">4.可用技能换物品或住房属于违法信息</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">5.寻人寻友：寻失踪多年不见的人或朋友、丢失的物品均可且可提供报酬，但内容中不可出现身份证号</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">6.寻找宠物或寻骗子信息</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">7.献爱心及无偿为他人做贡献的活动，禁止发布涉及金钱和物品的交易类信息</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="13" style="width:100px">违法类</td>
+                        <td rowspan="4" style="width:100px">投资担保</td>
+                        <td class="td_content">1.承兑汇票、汇票贴现、公积金提取信息</td>
+                        <td rowspan="4" style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.违规车辆抵押贷款（违规车辆包含套牌车、走私车、海关罚没车、脱审车、盗抢车、报废车、军车、警车、救护车、抵押车、黑车、顶账车、查封车、无手续车、贷款分期车等所有不能过户上牌的车辆）</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">3.公用房、未还清贷款的房等不能过户的房不能进行抵押贷款</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">4.内容中出现“安信惠鑫、兰花国际控股、东南亚联合银行、芝麻金融、惠仁财富、玖钰财富、一诺财富、e租宝、钰诚、钰申、金易融、中晋资产、融宜宝”。（金融欺诈企业《“e租宝”及其关联公司涉嫌非法集资》）</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" style="width:100px">工商注册</td>
+                        <td class="td_content">1.内容含有挂靠信息 （地址挂靠除外）</td>
+                        <td rowspan="2" style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.办理疑难及政府限制性批文、协助减免税务罚款、合理避税禁止（允许用“节税”一词描述，但不可含“避税”、“减税”、“免税点”等词句）</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" style="width:100px">招商加盟</td>
+                        <td class="td_content">1.POS机的售卖、诚聘代理、加盟、手机pos机类等类似pos机形式的信息（常见pos变形信息：支付者可以通过扫码等线上付款的交易方式支付，过程可使用信用卡，交易成功后会收取一定手续费或者提供可提供支付硬件设备如扫码枪等）</td>
+                        <td rowspan="2" style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.非法生产生物醇油等易燃易爆危险化学品加盟信息</td>
+                    </tr>
+                    <tr>
+                        <td style="width:100px">二手回收</td>
+                        <td class="td_content">回收车辆：套牌车、走私车、海关罚没车、脱审车、盗抢车、报废车、军车、警车、救护车、抵押车、无手续车等所有不能过户上牌的车辆信息</td>
+                        <td style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" style="width:100px">汽车服务</td>
+                        <td class="td_content">1.利用喷涂、反光、折射物质导致电子设备无法拍摄达到躲避违章效果的信息。包含不限于遥控遮挡车牌托、智能同步曝光器、遥控自动换号器、隐形车牌架、自动翻牌架、牌隐形改号魔贴、车牌磁贴号、车牌反光剂等</td>
+                        <td rowspan="2" style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.北京地区禁止发布小客车指标出租、出售等相关信息</td>
+                    </tr>
+                    <tr>
+                        <td style="width:100px">教育培训-通用</td>
+                        <td class="td_content">帖子中出现挂靠信息</td>
+                        <td style="width:100px">信息单条删除</td>
+                    </tr>
+                    <tr>
+                        <td style="width:100px">教育培训-学历教育</td>
+                        <td class="td_content">外国大学、高中不允许直接在中国招生（中国可以对外申请、或者合作国内中介通过留学招生）</td>
+                        <td style="width:100px">信息单条删除</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_2_2">标题内容违规说明</div>
+        <div class="div_body_nav_text">
+            <table>
+                <thead>
+                    <tr>
+                        <th>违规类型</th>
+                        <th>类别</th>
+                        <th>违规内容</th>
+                        <th>处理方式</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="9" style="width:100px">业务类</td>
+                        <td rowspan="2" style="width:100px">通用</td>
+                        <td class="td_content">1.标题：标题中禁止含有联系方式、网址、特殊字符（如：★ ◆ ❀ 等键盘上没有的）；标题中禁止只有数字、字母、数字字母等组合</td>
+                        <td rowspan="2" style="width:100px">信息返回修改</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.信息小镇所有类型的信息内容禁止出现微信、QQ、电话号码、二维码等联系方式（“微信同电话的”参照此条执行）</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="7" style="width:100px">信息小镇黄页找人</td>
+                        <td class="td_content">1.找人类别中，所有信息发布者的身份都应该是上述服务的提供者（个人）或者是代理人（如代母亲发帖一类），所有信息的内容（包括标题、简介）都应该为服务提供者的描述</td>
+                        <td rowspan="7" style="width:100px">信息返回修改</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">2.禁止发布一切与上述服务类别无关的信息——标题或内容与上述类别的服务无关，如标题或内容包含测试、信用卡服务等无关信息</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">3.禁止发布一切招聘信息</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">4.所有头像图片必须是人物头像</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">5.头像图片核心要求必须是正面人物头像，头像角度较偏（如出现侧脸等）、头像明显为名人头像、非人物头像等返回修改</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">6.头像图片中不得出现明显的联系方式，如QQ、电话等</td>
+                    </tr>
+                    <tr>
+                        <td class="td_content">7.头像图片中不得出现明显的中介、公司等字眼/背景</td>
                     </tr>
                 </tbody>
             </table>
