本地服务类

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
@@ -244,3 +244,16 @@ td {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.td_bdfw_dl {
+    width: 100px;
+}
+
+.td_bdfw_xl {
+    width: 200px;
+}
+
+
+.td_bdfw_clfs {
+    width: 150px;
+}
