--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -28,7 +28,6 @@
                 <span class="span_body_nav" id="1_2"><span class="span_body_nav_inner childnode">1_2.无意义内容违规说明</span></span>
                 <span class="span_body_nav" id="1_3"><span class="span_body_nav_inner childnode">1_3.分类不当违规说明</span></span>
                 <span class="span_body_nav" id="1_4"><span class="span_body_nav_inner childnode">1_4.图片违规原因说明</span></span>
-                <span class="span_body_nav" id="1_5"><span class="span_body_nav_inner childnode">1_5.信息虚假非法原因</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="2">2、<span class="span_body_nav_inner">本地服务行业审核信息的原因判定</span></span>
@@ -47,9 +46,9 @@
                 <span class="span_body_nav" id="3_4"><span class="span_body_nav_inner childnode">3_4.地址不详说明</span></span>
                 <span class="span_body_nav" id="3_5"><span class="span_body_nav_inner childnode">3_5.违禁信息说明</span></span>
                 <span class="span_body_nav" id="3_6"><span class="span_body_nav_inner childnode">3_6.职位虚假说明</span></span>
-                <span class="span_body_nav" id="3_6"><span class="span_body_nav_inner childnode">3_7.薪资虚假说明</span></span>
-                <span class="span_body_nav" id="3_6"><span class="span_body_nav_inner childnode">3_8.涉黄信息说明</span></span>
-                <span class="span_body_nav" id="3_6"><span class="span_body_nav_inner childnode">3_9.虚假信息说明</span></span>
+                <span class="span_body_nav" id="3_7"><span class="span_body_nav_inner childnode">3_7.薪资虚假说明</span></span>
+                <span class="span_body_nav" id="3_8"><span class="span_body_nav_inner childnode">3_8.涉黄信息说明</span></span>
+                <span class="span_body_nav" id="3_9"><span class="span_body_nav_inner childnode">3_9.虚假信息说明</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="4">4、<span class="span_body_nav_inner">二手市场审核信息的原因判定</span></span>
@@ -97,13 +96,13 @@
                         <td class="td_content">标题不得以做广告的形式出现，例如: “走过路过不要错过”,“挥泪大甩卖”等类似词语</td>
                     </tr>
                     <tr>
-                        <td class="td_content">不得发布诱导用户点击链接页面或分享信息，如 “网站链接” 、“欢迎进入xx网“、”打开xx网“、“微博微信账号”、“二维码“等，将做房源下架处理</td>
+                        <td class="td_content">标题不得发布诱导用户点击链接页面或分享信息，如 “网站链接” 、“欢迎进入xx网“、”打开xx网“、“微博微信账号”、“二维码“等，否则将做房源下架处理</td>
                     </tr>
                     <tr>
-                        <td class="td_content">不得使用繁体、异形字体、特殊符号等方式规避审核发布违规词，否则将房源下架处理</td>
+                        <td class="td_content">不得使用繁体、异形字体、特殊符号等方式规避审核发布违规词，否则将做房源下架处理</td>
                     </tr>
                     <tr>
-                        <td class="td_content">内容中不得出现非信息小镇的竞品网址（如百姓网、搜房等）</td>
+                        <td class="td_content">内容中不得出现非信息小镇的竞争品牌网址（如百姓网、搜房等）</td>
                     </tr>
                     <tr>
                         <td class="td_content">标题或内容中不得出现“加微信”以及繁体、异形字体、特殊符号等相关变形字</td>
@@ -126,9 +125,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="31" style="width:100px">业务类</td>
-                        <td class="td_content">不得发布带有“第一（NO.1Top1）”、“唯一”、“首席”、“楼王”、“极品”、“冠军”、“绝版”、“奢侈”、“至尊”、“顶级享受”、“国家级”、“世界级”、“首个”、“首选”、“精确”、“最”、“绝对”、“首家”等夸张极限类词汇内容，否则将做房源下架处理。</td>
-                        <td rowspan="31" style="width:100px">信息单条删除</td>
+                        <td rowspan="27" style="width:100px">业务类</td>
+                        <td class="td_content">不得发布带有“第一（NO.1Top1）”、“唯一”、“首席”、“楼王”、“极品”、“冠军”、“绝版”、“奢侈”、“至尊”、“顶级享受”、“国家级”、“世界级”、“首个”、“首选”、“精确”、“最”、“绝对”、“首家”等夸张极限类词汇内容，否则将做房源下架处理</td>
+                        <td rowspan="27" style="width:100px">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">不得发布含以下内容的房源信息：升值或者投资回报的承诺；以项目到达某一具体参照物的所需时间表示项目位置；违反国家有关价格管理的规定；对规划或者建设中的交通、商业、文化教育设施以及其他市政条件作误导宣传，否则将做房源下架处理</td>
@@ -173,7 +172,7 @@
                         <td class="td_content">关于期房（未建完、描述提到XX年交房的）除新房类别外不得在其他类别发布期房信息 （内容中同时出现期房和现房都有的信息，信息可以通过）</td>
                     </tr>
                     <tr>
-                        <td class="td_content">不得出售房号、房票、指标（购买资格、购买指标，学期房、学区房指标）</td>
+                        <td class="td_content">不得出售房号、房票、指标（购买资格、购买指标，学区房指标）</td>
                     </tr>
                     <tr>
                         <td class="td_content">不得出售房号，购房合同，购房资格的买房子送户口或者办学籍的，内容里描写的是房子可以通过，如果内容描述的是办户口或者学籍的好处，选择“标题或内容违规”删除，如果内容涉及到高考的，选择“无意义信息”删除）</td>
@@ -191,16 +190,7 @@
                         <td class="td_content">不得出现代办理居住证、暂住证的信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">不得出现无房源描述，仅含融资、无抵押贷款、单独办理贷款内容的信息</td>
-                    </tr>
-                    <tr>
                         <td class="td_content">不得出现代提取公积金、消除贷款不良记录、拆借等民间借贷性质的贷款信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">不得出现买卖考试答案、买卖学历证件、租赁经纪人资格证书、代开社保证明、代开税收证明、代开纳税证明、代开发票等信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">不得单独出售营业执照、购车指标的</td>
                     </tr>
                     <tr>
                         <td class="td_content">不得发布信用卡套现、信用卡变现等提供信用卡服务</td>
@@ -215,10 +205,7 @@
                         <td class="td_content">不得发布重复房源，否则将做房源下架处理</td>
                     </tr>
                     <tr>
-                        <td class="td_content">彩票机不可转让，彩票店带彩票机，无效信息删除</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">电话栏电话号码不得出现位数不足、明显虚假的电话号码（如：138888888888，0112-89179754）</td>
+                        <td class="td_content">不得发布与房产行业内容无关的信息</td>
                     </tr>
                 </tbody>
             </table>
@@ -236,7 +223,7 @@
                 <tbody>
                     <tr>
                         <td rowspan="2" style="width:100px">业务类</td>
-                        <td class="td_content">不得跨大类发布信息（如在房产类别发布二手、招聘信息；其中买卖墓地投放到本地生活服务；连锁加盟投放到本地商务服务；转让公司（无论是否带有房产）投放到本地商务服务）</td>
+                        <td class="td_content">不得跨大类发布信息（如在房产类别发布二手、招聘信息；买卖墓地投放到本地生活服务；连锁加盟投放到本地商务服务；转让公司（无论是否带有房产）投放到本地商务服务）</td>
                         <td rowspan="2" style="width:100px">信息返回修改</td>
                     </tr>
                     <tr>
@@ -257,9 +244,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="17" style="width:100px">业务类</td>
-                        <td class="td_content">不得在图片上加盖任何竞品水印（包括但不仅限于其他网站logo，网址，100%、真房源、佣金等广告字样），否则将做房源下架处理；对于非竞品中介公司名称和logo，要求白色、透明、所占图片面积小于25%三个条件必须同时满足，否则将做房源下架处理。对于非竞品中介公司名称+宣传语——房源下架处理</td>
-                        <td rowspan="17" style="width:100px">信息返回修改</td>
+                        <td rowspan="16" style="width:100px">业务类</td>
+                        <td class="td_content">不得在图片上加盖任何竞品水印（包括但不仅限于其他网站logo，网址，100%、真房源、佣金等广告字样），否则将做房源下架处理；对于非竞品中介公司名称和logo，要求白色、透明、所占图片面积小于25%三个条件必须同时满足，否则将做房源下架处理；对于非竞品中介公司名称+宣传语——房源下架处理</td>
+                        <td rowspan="16" style="width:100px">信息返回修改</td>
                     </tr>
                     <tr>
                         <td class="td_content">不得发布虚假的房源图片（与内部图片或本套房源不一致的房源图，装修情况不一致），否则将做房源下架处理</td>
@@ -298,9 +285,6 @@
                         <td class="td_content">不得在图片周围添加任何形式的边框</td>
                     </tr>
                     <tr>
-                        <td class="td_content">发布城市为南昌,图片中出现房源核实二维码官方标志，在封面图（首图）位置按图片违规处理，在其他位置，做通过处理</td>
-                    </tr>
-                    <tr>
                         <td class="td_content">【商铺】【写字楼】【厂房/仓库/土地】类别，除门面（广告条幅，LED屏）中可含有电话外，其他情况按违规处理</td>
                     </tr>
                     <tr>
@@ -308,45 +292,6 @@
                     </tr>
                     <tr>
                         <td class="td_content">【商铺】【写字楼】【厂房/仓库/土地】类别，图片为效果图（楼盘图、沙盘图等），可以通过，其他类别图片不能含效果图</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_5">1_5.信息虚假非法原因<div class="div_fhdb"><span class="span_fhdb_img"></span><span class="span_fhdb">返回顶部</span></div></div>
-        <div class="div_body_nav_text">
-            <table>
-                <thead>
-                    <tr>
-                        <th>违规类型</th>
-                        <th>违规内容</th>
-                        <th>处理方式</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td rowspan="3" style="width:100px">违法类</td>
-                        <td class="td_content">不得发布反对宪法所确定的基本原则的；危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；损害国家荣誉和利益的信息</td>
-                        <td rowspan="3" style="width:100px">禁止发帖+删除账户下全部信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">不得发布煽动民族仇恨、民族歧视，破坏民族团结的；破坏国家宗教政策，宣扬邪教和封建迷信的；散布谣言，扰乱社会秩序，破坏社会稳定的；侮辱或者诽谤他人，侵害他人合法权益的信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">不得发布散布淫秽、色情、赌博、暴力、凶杀、毒品、恐怖或者教唆犯罪的；含有法律、行政法规禁止的其他的内容的</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="4" style="width:100px">欺诈类</td>
-                        <td class="td_content">对于引导用户添加微信以及变形联系方式（同音异形字，用符号隔断等）视情节严重，做冻结账号处理</td>
-                        <td rowspan="4" style="width:100px">禁止发帖+删除账户下全部信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">不得出现含明显的色情诱惑，裸露图片</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">内容中不得出现“人在外地不方便随时回来看房，或预交定金才能回来看房”</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">内容中不得出现“视频地址、提取码”</td>
                     </tr>
                 </tbody>
             </table>
@@ -368,42 +313,42 @@
                     <tr>
                         <td rowspan="63" class="td_bdfw_dl">业务类</td>
                         <td rowspan="8" class="td_bdfw_xl">投资担保</td>
-                        <td class="td_content">1.出现“仅凭、只需要身份证（或者“身份证、银行卡、学生证、住址、公积金密码”中任意组合）可贷款”或相同意思；个人信用贷款，如果内容中出现“不看征信不看流水”、“可办黑户”、“信用不良”、“取消黑名单”以及表达相近意思的；</td>
+                        <td class="td_content">1.出现“仅凭、只需要身份证（或者“身份证、银行卡、学生证、住址、公积金密码”中任意组合）可贷款”或相同意思；个人信用贷款，如果内容中出现“不看征信不看流水”、“可办黑户”、“信用不良”、“取消黑名单”以及表达相近意思的</td>
                         <td rowspan="8" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
-                        <td class="td_content">2.投资理财类别，出现‘刷单套利’信息；</td>
+                        <td class="td_content">2.投资理财类别，出现‘刷单套利’信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">3.黄页-贷款类内容中出现“平安易贷、平安普惠、大华银行、大华小额贷款”，均属于未授权信息；</td>
+                        <td class="td_content">3.黄页-贷款类内容中出现“平安易贷、平安普惠、大华银行、大华小额贷款”，均属于未授权信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">4.内容中含有“垫资”及其变形文字（垫还/代还——不能确认是高利贷的贷款暂不限制）；</td>
+                        <td class="td_content">4.内容中含有“垫资”及其变形文字（垫还/代还——不能确认是高利贷的贷款暂不限制）</td>
                     </tr>
                     <tr>
-                        <td class="td_content">5.深圳市前海鑫桂石油化工发布投资理财信息；</td>
+                        <td class="td_content">5.深圳市前海鑫桂石油化工发布投资理财信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">6. 内容中提及：股票配资、配资炒股、股指配资、证券配资、股票融资等相近词信息</td>
+                        <td class="td_content">6.内容中提及：股票配资、配资炒股、股指配资、证券配资、股票融资等相近词信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">7.投资理财类别出现原油贵金属投资信息。</td>
+                        <td class="td_content">7.投资理财类别出现原油贵金属投资信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">8.禁止发布高利贷相关如水钱等信息。</td>
+                        <td class="td_content">8.禁止发布高利贷相关如水钱等信息</td>
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">礼品定制</td>
-                        <td class="td_content">未验证资质的公司及个人禁止发布含刻公章类信息（如信息中含刻公章，需验证营业执照+特种行业许可证/中国印章行业协会证明）<br />注：所有刻章类信息仅限在“礼品定制”类别发布；公司注册类别可顺带公章服务。</td>
+                        <td class="td_content">未验证资质的公司及个人禁止发布含刻公章类信息（如信息中含刻公章，需验证营业执照+特种行业许可证/中国印章行业协会证明）<br />注：所有刻章类信息仅限在“礼品定制”类别发布；公司注册类别可顺带公章服务</td>
                         <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">工商注册</td>
-                        <td class="td_content">1.未验证营业执照的公司及个人禁止代办“食品流通许可证”、“食品卫生许可证（简称卫生许可证）”的信息。</td>
+                        <td class="td_content">1.未验证营业执照的公司及个人禁止代办“食品流通许可证”、“食品卫生许可证（简称卫生许可证）”的信息</td>
                         <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
-                        <td class="td_content">2.单独转让或回收执照交易类服务。</td>
+                        <td class="td_content">2.单独转让或回收执照交易类服务</td>
                     </tr>
                     <tr>
                         <td rowspan="4" class="td_bdfw_xl">网络布线/维护</td>
@@ -436,7 +381,7 @@
                         <td class="td_content">3.泰国红牛、越南红牛招商信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">4.“卡盟”招商加盟信息（利用黑卡进行QQ刷钻业务）；</td>
+                        <td class="td_content">4.“卡盟”招商加盟信息（利用黑卡进行QQ刷钻业务）</td>
                     </tr>
                     <tr>
                         <td class="td_content">5.“原油贵金属”、“微盘/微交易（原油贵金属交易平台）”招商加盟信息</td>
@@ -1789,7 +1734,7 @@
                     <tr>
                         <td rowspan="5" style="width:100px">欺诈类</td>
                         <td class="td_content">1.标注价格与实际交易价格偏离一般市场价格波动（双方另有约定除外）</td>
-                        <td rowspan="5" style="width:300px">会员：每个违规信息，删除处理同时扣1分。累计扣12分冻结3天，被冻结时，账号显示中的信息，删除处理。非会员：每个违规信息，删除处理同时扣4分。累计扣12分冻结3天，被冻结时，账号显示中的信息，删除处理。</td>
+                        <td rowspan="5" style="width:300px">会员：每个违规信息，删除处理同时扣1分。累计扣12分冻结3天，被冻结时，账号显示中的信息，删除处理。非会员：每个违规信息，删除处理同时扣4分。累计扣12分冻结3天，被冻结时，账号显示中的信息，删除处理</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.价格表述含糊，价格单位与价格数字之间不匹配</td>
