--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -314,7 +314,7 @@
                         <td rowspan="63" class="td_bdfw_dl">业务类</td>
                         <td rowspan="8" class="td_bdfw_xl">投资担保</td>
                         <td class="td_content">1.出现“仅凭、只需要身份证（或者“身份证、银行卡、学生证、住址、公积金密码”中任意组合）可贷款”或相同意思；个人信用贷款，如果内容中出现“不看征信不看流水”、“可办黑户”、“信用不良”、“取消黑名单”以及表达相近意思的</td>
-                        <td rowspan="8" class="td_bdfw_clfs">信息单条删除</td>
+                        <td rowspan="76" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.投资理财类别，出现‘刷单套利’信息</td>
@@ -340,12 +340,10 @@
                     <tr>
                         <td class="td_bdfw_xl">礼品定制</td>
                         <td class="td_content">未验证资质的公司及个人禁止发布含刻公章类信息（如信息中含刻公章，需验证营业执照+特种行业许可证/中国印章行业协会证明）<br />注：所有刻章类信息仅限在“礼品定制”类别发布；公司注册类别可顺带公章服务</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">工商注册</td>
                         <td class="td_content">1.未验证营业执照的公司及个人禁止代办“食品流通许可证”、“食品卫生许可证（简称卫生许可证）”的信息</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.单独转让或回收执照交易类服务</td>
@@ -353,13 +351,12 @@
                     <tr>
                         <td rowspan="4" class="td_bdfw_xl">网络布线/维护</td>
                         <td class="td_content">1.有偿删帖消息</td>
-                        <td rowspan="4" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.蹭网卡、永久免费上网类信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">3.禁止发布发帖机，发帖软件信息不合格</td>
+                        <td class="td_content">3.禁止发布发帖机，发帖软件信息</td>
                     </tr>
                     <tr>
                         <td class="td_content">4.禁止发布约车第三方作弊信息(如加速器、抢单/拒单/卡单器、定位模拟器、代注册、账号解封等)，以及淘宝刷钻、app刷单、提供微信投票、点赞、买卖粉丝等作弊信息</td>
@@ -367,24 +364,22 @@
                     <tr>
                         <td class="td_bdfw_xl">律师</td>
                         <td class="td_content">取保候审，看守所放人、监狱放人、保外就医及类似描述的此类信息，信息小镇允许有资质的发布但不允许承诺字样</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="10" class="td_bdfw_xl">招商加盟</td>
                         <td class="td_content">1.买卖（含回收）、加盟 “军供、特供酒”的</td>
-                        <td rowspan="10" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.禁止发布烟草信息。酒类买卖、招商加盟都可以发布</td>
                     </tr>
                     <tr>
-                        <td class="td_content">3.泰国红牛、越南红牛招商信息</td>
+                        <td class="td_content">3.禁止发布泰国红牛、越南红牛招商信息(牛磺酸超标)</td>
                     </tr>
                     <tr>
-                        <td class="td_content">4.“卡盟”招商加盟信息（利用黑卡进行QQ刷钻业务）</td>
+                        <td class="td_content">4.禁止发布“卡盟”招商加盟信息（利用黑卡进行QQ刷钻业务）</td>
                     </tr>
                     <tr>
-                        <td class="td_content">5.“原油贵金属”、“微盘/微交易（原油贵金属交易平台）”招商加盟信息</td>
+                        <td class="td_content">5.禁止发布“原油贵金属”、“微盘/微交易（原油贵金属交易平台）”招商加盟信息</td>
                     </tr>
                     <tr>
                         <td class="td_content">6.淘宝招商加盟（网店加盟里有品牌的可以通过）、网店培训、一件代发、商城返利网站等信息（微店可以通过）</td>
@@ -404,7 +399,6 @@
                     <tr>
                         <td rowspan="3" class="td_bdfw_xl">二手回收</td>
                         <td class="td_content">1.易燃易爆危险品类的买卖回收，汽油、柴油类可以发布；烟花爆竹的买卖回收禁止</td>
-                        <td rowspan="3" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.内容中出现“烟草回收”、“烟草买卖”以及相近意思的，全站禁发</td>
@@ -415,7 +409,6 @@
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">批发采购</td>
                         <td class="td_content">1.手机数码/通讯类内容中（包括图片）出现蜗牛移动产品“蜗牛免卡”，均属侵权信息</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.出售电话卡、物联卡信息</td>
@@ -423,7 +416,6 @@
                     <tr>
                         <td rowspan="5" class="td_bdfw_xl">美容美体/养生保健/医疗</td>
                         <td class="td_content">1.禁止发布有治病功效的医院及药品（减肥药、壮阳药不行）、药械信息（医用的不行，家用的可以，如眼保姆，轮椅、护理床等）；保健品、保健功能产品买卖（可以发布如VC，人参、枸杞等）；“根治乙肝 、 乙肝转阴”等夸大治疗效果的信息、祖传秘方治病信息拒绝</td>
-                        <td rowspan="5" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.禁止发布处方药、禁止发布白加黑、康泰克等限制性非处方药，且发布药品信息，必须具有食品药品监管部门核发的《互联网药品交易服务资格证》，且必须为实体药品零售连锁企业；发布保健品信息，要求商家所发布的保健品需要具有国家食品药品监督管理局颁发的保健品批准文号，可在食品药品监督管理局网站查询</td>
@@ -440,7 +432,6 @@
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">驾校</td>
                         <td class="td_content">1. 驾校类内容中（包括图片）出现“凤安驾校、凤安驾驶员培训中心”（除白名单）<br />凤安驾校[广州市凤安驾驶员培训中心；赶集只有一个白名单（用户名：fajxgj），58无白名单]</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.禁止发布驾校免指纹芯片、电子围栏破解等代刷学时等作弊信息</td>
@@ -448,12 +439,10 @@
                     <tr>
                         <td class="td_bdfw_xl">长途专车</td>
                         <td class="td_content">出发地点与终点涉及出入境的路线（如内地至港澳台、内地至国外）等无意义信息</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="3" class="td_bdfw_xl">汽车服务</td>
                         <td class="td_content">1.信息小镇的学车、陪练业务类别，全部在线推广信息创意标题及描述、显示在信息小镇列表页的内容不能含信息小镇等引起客户误解为信息小镇自营服务的字样，如“信息小镇学车”</td>
-                        <td rowspan="3" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.过户/验车类别允许发布买卖车牌、出租车牌、代办车牌、代拍车牌、指标转让、免摇号、违章代办、违章处理、收消驾照、代扣驾照分、无车年检/验车、人不来验车、改装车验车、疑难验车、老旧车验车、无车过户、无车报废、无车提档、代办进京证等信息</td>
@@ -464,12 +453,10 @@
                     <tr>
                         <td class="td_bdfw_xl">装修建材</td>
                         <td class="td_content">内容中（包括图片）出现以“金螳螂”公司、商标或以旗下公司名义进行宣传，均属侵权信息<br />注：[金螳螂——苏州金螳螂建筑装饰股份有限公司]</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="7" class="td_bdfw_xl">教育培训-学历培训</td>
                         <td class="td_content">1.免考试、免成考、免统考、免试入学（不含自考）均不合格；有特殊条件的可以“如学历、荣誉称号、大赛获奖情况以各类奖项证书等”；1-3个科目以内免考信息可以通过</td>
-                        <td rowspan="7" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.毕业院校是中国地质大学的（会有北京、武汉校区）</td>
@@ -492,12 +479,10 @@
                     <tr>
                         <td class="td_bdfw_xl">教育培训-外语培训</td>
                         <td class="td_content">广告性质的英语在线试听网站禁止发布，如太平洋</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="5" class="td_bdfw_xl">教育培训-留学签证</td>
                         <td class="td_content">1.1）留学移民里面出现有关购置国外物业，房产办理移民的信息<br />1.2）出国结婚、介绍外国对象的信息<br />1.3）出国含有绿卡、大马卡、枫叶卡<br />1.4）代办存款证明，代写商业计划书的信息<br />1.5）禁止留学移民办理处描述提供资金证明</td>
-                        <td rowspan="5" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.留学移民类，代申请流程可以，代办技术移民或是学历证书不可以</td>
@@ -514,7 +499,6 @@
                     <tr>
                         <td rowspan="7" class="td_bdfw_xl">同城交友</td>
                         <td class="td_content">1.同城交友中内容不得涉及金钱、禁止发布淫秽敏感和诋毁他人的负面言语</td>
-                        <td rowspan="7" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.技能交换中交换淘宝开店技能属于无效信息</td>
@@ -538,7 +522,6 @@
                         <td rowspan="13" class="td_bdfw_dl">违法类</td>
                         <td rowspan="4" class="td_bdfw_xl">投资担保</td>
                         <td class="td_content">1.承兑汇票、汇票贴现、公积金提取信息</td>
-                        <td rowspan="4" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.违规车辆抵押贷款（违规车辆包含套牌车、走私车、海关罚没车、脱审车、盗抢车、报废车、军车、警车、救护车、抵押车、黑车、顶账车、查封车、无手续车、贷款分期车等所有不能过户上牌的车辆）</td>
@@ -552,7 +535,6 @@
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">工商注册</td>
                         <td class="td_content">1.内容含有挂靠信息 （地址挂靠除外）</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.办理疑难及政府限制性批文、协助减免税务罚款、合理避税禁止（允许用“节税”一词描述，但不可含“避税”、“减税”、“免税点”等词句）</td>
@@ -560,7 +542,6 @@
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">招商加盟</td>
                         <td class="td_content">1.POS机的售卖、诚聘代理、加盟、手机pos机类等类似pos机形式的信息（常见pos变形信息：支付者可以通过扫码等线上付款的交易方式支付，过程可使用信用卡，交易成功后会收取一定手续费或者提供可提供支付硬件设备如扫码枪等）</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.非法生产生物醇油等易燃易爆危险化学品加盟信息</td>
@@ -568,12 +549,10 @@
                     <tr>
                         <td class="td_bdfw_xl">二手回收</td>
                         <td class="td_content">回收车辆：套牌车、走私车、海关罚没车、脱审车、盗抢车、报废车、军车、警车、救护车、抵押车、无手续车等所有不能过户上牌的车辆信息</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td rowspan="2" class="td_bdfw_xl">汽车服务</td>
                         <td class="td_content">1.利用喷涂、反光、折射物质导致电子设备无法拍摄达到躲避违章效果的信息。包含不限于遥控遮挡车牌托、智能同步曝光器、遥控自动换号器、隐形车牌架、自动翻牌架、牌隐形改号魔贴、车牌磁贴号、车牌反光剂等</td>
-                        <td rowspan="2" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.北京地区禁止发布小客车指标出租、出售等相关信息</td>
@@ -581,12 +560,10 @@
                     <tr>
                         <td class="td_bdfw_xl">教育培训-通用</td>
                         <td class="td_content">帖子中出现挂靠信息</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">教育培训-学历教育</td>
                         <td class="td_content">外国大学、高中不允许直接在中国招生（中国可以对外申请、或者合作国内中介通过留学招生）</td>
-                        <td class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                 </tbody>
             </table>
