--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -311,10 +311,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="63" class="td_bdfw_dl">业务类</td>
+                        <td rowspan="57" class="td_bdfw_dl">业务类</td>
                         <td rowspan="8" class="td_bdfw_xl">投资担保</td>
                         <td class="td_content">1.出现“仅凭、只需要身份证（或者“身份证、银行卡、学生证、住址、公积金密码”中任意组合）可贷款”或相同意思；个人信用贷款，如果内容中出现“不看征信不看流水”、“可办黑户”、“信用不良”、“取消黑名单”以及表达相近意思的</td>
-                        <td rowspan="76" class="td_bdfw_clfs">信息单条删除</td>
+                        <td rowspan="70" class="td_bdfw_clfs">信息单条删除</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.投资理财类别，出现‘刷单套利’信息</td>
@@ -366,7 +366,7 @@
                         <td class="td_content">取保候审，看守所放人、监狱放人、保外就医及类似描述的此类信息，信息小镇允许有资质的发布但不允许承诺字样</td>
                     </tr>
                     <tr>
-                        <td rowspan="10" class="td_bdfw_xl">招商加盟</td>
+                        <td rowspan="7" class="td_bdfw_xl">招商加盟</td>
                         <td class="td_content">1.买卖（含回收）、加盟 “军供、特供酒”的</td>
                     </tr>
                     <tr>
@@ -382,36 +382,24 @@
                         <td class="td_content">5.禁止发布“原油贵金属”、“微盘/微交易（原油贵金属交易平台）”招商加盟信息</td>
                     </tr>
                     <tr>
-                        <td class="td_content">6.淘宝招商加盟（网店加盟里有品牌的可以通过）、网店培训、一件代发、商城返利网站等信息（微店可以通过）</td>
+                        <td class="td_content">6.禁止发布淘宝招商加盟（网店加盟里有品牌的可以通过）、网店培训、一件代发、商城返利网站等信息（微店可以通过）</td>
                     </tr>
                     <tr>
-                        <td class="td_content">7.内容中（包括图片）出现“绿茶餐厅”、“陈子安饼屋”加盟信息，均属侵权信息——描述不合格拒绝<br />注：[绿茶餐厅——杭州绿茶餐饮管理有限公司]、[陈子安饼屋——郑州陈子安企业管理咨询有限公司] </td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">8.内容中（包括图片）出现 “随行付”加盟信息，均属侵权信息<br />注：[随行付——北京随行付信息技术有限公司]</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">9.内容中（包括图片）出现 “勿相忘”加盟信息，均属侵权信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">10. 维卡币、摩根币、DGC等数字货币信息</td>
+                        <td class="td_content">7.维卡币、摩根币、DGC等数字货币信息</td>
                     </tr>
                     <tr>
                         <td rowspan="3" class="td_bdfw_xl">二手回收</td>
-                        <td class="td_content">1.易燃易爆危险品类的买卖回收，汽油、柴油类可以发布；烟花爆竹的买卖回收禁止</td>
+                        <td class="td_content">1.禁止发布易燃易爆危险品类以及烟花爆竹的买卖回收信息（汽油、柴油类可以发布）</td>
                     </tr>
                     <tr>
-                        <td class="td_content">2.内容中出现“烟草回收”、“烟草买卖”以及相近意思的，全站禁发</td>
+                        <td class="td_content">2.禁止发布“烟草回收”、“烟草买卖”以及相近意思的信息</td>
                     </tr>
                     <tr>
                         <td class="td_content">3.回收酒可以发布；但都仅限发布在二手回收-礼品回收类别，不能多选其他类别</td>
                     </tr>
                     <tr>
-                        <td rowspan="2" class="td_bdfw_xl">批发采购</td>
-                        <td class="td_content">1.手机数码/通讯类内容中（包括图片）出现蜗牛移动产品“蜗牛免卡”，均属侵权信息</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">2.出售电话卡、物联卡信息</td>
+                        <td class="td_bdfw_xl">批发采购</td>
+                        <td class="td_content">1.禁止发布出售电话卡、物联卡信息</td>
                     </tr>
                     <tr>
                         <td rowspan="5" class="td_bdfw_xl">美容美体/养生保健/医疗</td>
@@ -430,15 +418,12 @@
                         <td class="td_content">5.信息中禁止出现成药（中草药、保健品可以）</td>
                     </tr>
                     <tr>
-                        <td rowspan="2" class="td_bdfw_xl">驾校</td>
-                        <td class="td_content">1. 驾校类内容中（包括图片）出现“凤安驾校、凤安驾驶员培训中心”（除白名单）<br />凤安驾校[广州市凤安驾驶员培训中心；赶集只有一个白名单（用户名：fajxgj），58无白名单]</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">2.禁止发布驾校免指纹芯片、电子围栏破解等代刷学时等作弊信息</td>
+                        <td class="td_bdfw_xl">驾校</td>
+                        <td class="td_content">1. 禁止发布驾校免指纹芯片、电子围栏破解等代刷学时等作弊信息</td>
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">长途专车</td>
-                        <td class="td_content">出发地点与终点涉及出入境的路线（如内地至港澳台、内地至国外）等无意义信息</td>
+                        <td class="td_content">禁止发布出发地点与终点涉及出入境的路线（如内地至港澳台、内地至国外）等无意义信息</td>
                     </tr>
                     <tr>
                         <td rowspan="3" class="td_bdfw_xl">汽车服务</td>
@@ -451,15 +436,11 @@
                         <td class="td_content">3.通过假结婚等不正当途径买卖车牌信息</td>
                     </tr>
                     <tr>
-                        <td class="td_bdfw_xl">装修建材</td>
-                        <td class="td_content">内容中（包括图片）出现以“金螳螂”公司、商标或以旗下公司名义进行宣传，均属侵权信息<br />注：[金螳螂——苏州金螳螂建筑装饰股份有限公司]</td>
-                    </tr>
-                    <tr>
                         <td rowspan="7" class="td_bdfw_xl">教育培训-学历培训</td>
                         <td class="td_content">1.免考试、免成考、免统考、免试入学（不含自考）均不合格；有特殊条件的可以“如学历、荣誉称号、大赛获奖情况以各类奖项证书等”；1-3个科目以内免考信息可以通过</td>
                     </tr>
                     <tr>
-                        <td class="td_content">2.毕业院校是中国地质大学的（会有北京、武汉校区）</td>
+                        <td class="td_content">2.毕业院校是中国地质大学的（会有北京、武汉两个不同学校）</td>
                     </tr>
                     <tr>
                         <td class="td_content">3.内容必须有培训课程或机构介绍合格，如果不符合要求删除</td>
@@ -471,10 +452,10 @@
                         <td class="td_content">5.内容出现只考一次、本人只参加一次考试，或类似内容禁止</td>
                     </tr>
                     <tr>
-                        <td class="td_content">6.发布的内容中含有“包过、保过、协议包过、100%拿证、100%通过、100%取证、包拿证、包通过、包取证”等相近意思不合格</td>
+                        <td class="td_content">6.发布的内容中不能含有“包过、保过、协议包过、100%拿证、100%通过、100%取证、包拿证、包通过、包取证”等相近意思的词语</td>
                     </tr>
                     <tr>
-                        <td class="td_content">7.毕业时间要求：公立学历、私立教育、民办教育、国家承认大专证、本科证等院校毕业时间必须一年以上，不能多于8 年； 如出现半年、一个月毕业、一年左右等字样,则不合格</td>
+                        <td class="td_content">7.毕业时间要求：公立学历、私立教育、民办教育、国家承认大专证、本科证等院校毕业时间必须一年以上，不能多于8 年；如出现半年、一个月毕业、一年左右等字样,则不合格</td>
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">教育培训-外语培训</td>
@@ -513,7 +494,7 @@
                         <td class="td_content">5.寻人寻友：寻失踪多年不见的人或朋友、丢失的物品均可且可提供报酬，但内容中不可出现身份证号</td>
                     </tr>
                     <tr>
-                        <td class="td_content">6.寻找宠物或寻骗子信息</td>
+                        <td class="td_content">6.禁止发布寻找宠物或寻骗子信息</td>
                     </tr>
                     <tr>
                         <td class="td_content">7.献爱心及无偿为他人做贡献的活动，禁止发布涉及金钱和物品的交易类信息</td>
@@ -521,7 +502,7 @@
                     <tr>
                         <td rowspan="13" class="td_bdfw_dl">违法类</td>
                         <td rowspan="4" class="td_bdfw_xl">投资担保</td>
-                        <td class="td_content">1.承兑汇票、汇票贴现、公积金提取信息</td>
+                        <td class="td_content">1.禁止发布承兑汇票、汇票贴现、公积金提取信息</td>
                     </tr>
                     <tr>
                         <td class="td_content">2.违规车辆抵押贷款（违规车辆包含套牌车、走私车、海关罚没车、脱审车、盗抢车、报废车、军车、警车、救护车、抵押车、黑车、顶账车、查封车、无手续车、贷款分期车等所有不能过户上牌的车辆）</td>
@@ -711,7 +692,7 @@
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">教育培训-家教</td>
-                        <td class="td_content">教育培训机构出现招聘信息，属于类别误置，应投放招聘</td>
+                        <td class="td_content">1.教育培训机构出现招聘信息，属于类别误置，应投放招聘</td>
                         <td class="td_bdfw_clfs">信息返回修改</td>
                     </tr>
                 </tbody>
