--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_XXBSC.cshtml
@@ -645,7 +645,7 @@
                     </tr>
                     <tr>
                         <td class="td_bdfw_xl">保姆</td>
-                        <td class="td_content">招聘保姆月嫂等招聘相关信息需发布至招聘类别</td>
+                        <td class="td_content">1.招聘保姆月嫂等招聘相关信息需发布至招聘类别</td>
                         <td class="td_bdfw_clfs">信息返回修改</td>
                     </tr>
                     <tr>
@@ -822,9 +822,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="27" style="width:100px">业务类</td>
+                        <td rowspan="25" style="width:100px">业务类</td>
                         <td class="td_content">标题、公司简介等内容，不能有QQ，MSN，电话、微信、邮箱等一切联系方式。岗位职责以及简介中可以含有网址，但不能仅留网址</td>
-                        <td rowspan="27" style="width:100px">信息返回修改</td>
+                        <td rowspan="25" style="width:100px">信息返回修改</td>
                     </tr>
                     <tr>
                         <td class="td_content">标题、公司简介等内容，不能是纯拼音、纯数字、特殊符号（包含但不局限于：★ ◆ ❀、#、*、竖线、撇捺等）或者是乱写</td>
@@ -857,9 +857,6 @@
                         <td class="td_content">招聘中出现使用国家领导人或者家属作为宣传语的</td>
                     </tr>
                     <tr>
-                        <td class="td_content">电话栏电话为010-80000000、15800000000类似电话不合格的</td>
-                    </tr>
-                    <tr>
                         <td class="td_content">职介性质公司，描述中出现为企业“直招”性质；直招企业同一条信息中为多家企业招聘职位</td>
                     </tr>
                     <tr>
@@ -888,9 +885,6 @@
                     </tr>
                     <tr>
                         <td class="td_content">餐饮企业（小餐馆、饭店、餐饮管理等）可直招外卖骑手、外卖送餐员，无需说明隶属或合作关系。其他性质企业招聘外卖骑手、外卖送餐员需简介中说明隶属或合作关系</td>
-                    </tr>
-                    <tr>
-                        <td class="td_content">公司简介可以为空</td>
                     </tr>
                     <tr>
                         <td class="td_content">除了信息小镇总公司、分公司直招以及代理商（简介中有说明与信息小镇关系）招聘，其他公司均不允许用信息小镇的图片，图片中也不能出现“信息小镇优质商家”字样的内容（比如牌匾中）</td>
