--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -57,7 +57,7 @@
                 <span class="span_left_box_info_text">发布高质量帖子</span>
                 <span class="span_left_box_info_remark">教你发布用户喜欢的贴</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_ftbg">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_ftbg.png")" />
                 <span class="span_left_box_info_text">发帖版规</span>
                 <span class="span_left_box_info_remark">发帖质量控制说明</span>
